--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -30,7 +30,6 @@
 \begin{document}
 
 \maketitle
-\newpage
 
 \section{Abstract}
 The STEM Academy Data Solution is a product proposed to the clients, STEM Academy, as a solution to their need for an efficient way of collecting survey data and reporting summary information.
@@ -40,6 +39,9 @@ It also discusses the requirements themselves, from the user interface to genera
 Lastly, it clarifies performance requirements to ensure that the product functions within reasonable expectations for the clients.
 
 \newpage
+\tableofcontents
+\newpage
+
 \section{Introduction}
 \subsection{Purpose}
 This software requirements specification is intended to define the requirements of the project of developing a database 
