--- a/final_tech_review.tex
+++ b/final_tech_review.tex
@@ -31,11 +31,7 @@ Its purpose is to automate the process of aggregating survey data and generating
 For this technology review, split our product into subcomponents and compared three different alternatives for those subcomponents.
 We analyzed these alternatives and came to a decision on which technology we would use for each.
 \end{abstract}
-
 \newpage
-\tableofcontents
-\newpage
-
 \section{Introduction}
 Data drives much change in today's world with the advent of data technology. The STEM Academy in Corvallis,
  Oregon has been collecting data on their various camps and programs by paper surveys. This data has often 
@@ -152,13 +148,6 @@ MongoDB is also document-oriented, which means that it organizes and manages dat
 This type of structure and orientation fits well with the storing of surveys, which are inherently documents, however, this does not work for storing data on students and their responses, which may require a more traditional relational database system to connect the students with their survey responses.
 As open source software, using the bare bones software for MongoDB is free of cost, which reduces or eliminates the cost for our clients to uphold the database. \cite{mongo_cost}.
 However, this is for the bare bones software, and if there are additional features needed by our clients that MongoDB provides, that will require additional cost \cite{mongo_cost}.
-\subsection{Discussion and Recommendation}
-Whichever software we use for the database setup and storage will need to depend on what cost Microsoft Access would have for STEM Academy.
-If the cost is manageable for STEM Academy, we could use Microsoft Access.
-However, if it is not, we may decide on phpMyAdmin.
-Although it would require accessing a web server that can be hosted on Oregon State's infrastructure (which is done in database classes), it is free software that can accomplish what we need without any worries of cost.
-However, most likely, the software used will be whatever Central Services provides.
-We can use phpMyAdmin to prototype, but the final technology will be primarily decided for us.
 
 \section{Survey Distribution}
 Surveys must be distributable in URLs or other formats so that survey takers can easily access the survey from their own computer. The most useful format would be through email.
@@ -186,11 +175,6 @@ MailChimp also provides an API for use in developing \cite{mailchimp_features}.
 As marketing software, MailChimp has many features and uses, many of which would be superfluous for our clients, who only need a way to provide a quick-access link to the surveys and distribute them in a way that survey takers can access them from many different locations.
 Also as marketing software, it's purpose is drastically different from what we would be using it for.
 Email lists and automated messages are provided by MailChimp for this, but it could be easier to use different tools that are more focused on just those features.
-\subsection{Discussion and Recommendation}
-For distributing the surveys, our best solution will probably be PHPMailer.
-It provides the functionality of the built-in \texttt{mail()} function, but with extra options that could be useful for us, including not requiring a separate web server.
-However, as of now, we are not looking at distribution of surveys through a specific technology.
-Instead, we will provide a link to the surveys to students at each camp.
 
 \section{Printable Surveys}
 Surveys that are generated on our system must have the ability to be printed and distributed on paper instead of just online.
@@ -214,80 +198,113 @@ The format of the generated PDF can be set and any HTML or CSS stylings are appl
 This allows us to generate a button on the page without creating the code to do so from scratch and applying it to a built-in function, like \texttt{window.print()} above.
 It supports several HTML elements such as different block elements, tables, and lists \cite{css2pdf_home}.
 It is also in process and being improved and will likely add more features and capabilities in the future, though this may not be useful as we will most likely finish developing this project at the end of the year.
-\subsection{Discussion and Recommendation}
+
+\section{Decision for Database Management, Survey Distribution and Printable Surveys}
+Whichever software we use for the database setup and storage will need to depend on what cost Microsoft Access would have for STEM Academy.
+If the cost is manageable for STEM Academy, we could use Microsoft Access.
+However, if it is not, we may decide on phpMyAdmin.
+Although it would require accessing a web server that can be hosted on Oregon State's infrastructure (which is done in database classes), it is free software that can accomplish what we need without any worries of cost.
+For distributing the surveys, our best solution will probably be PHPMailer.
+It provides the functionality of the built-in \texttt{mail()} function, but with extra options that could be useful for us, including not requiring a separate web server.
 For printing surveys, the css2pdf library looks like a more rounded option than the default \texttt{print()} function without having to do some extra work on our part (such as creating our own print button). 
-However, this is another component we are not currently looking at implementing separately.
-We will display previewable versions of surveys, which can be printed through the browser.
+
+
+
 
 %Javier's part begins here 
 %Search Form 
-\section{Search Form}
-The goal of the search form is to be able to make queries based on camp, club, program, student, demographic information, and survey questions. The form should also allow to make queries using a combination of searh criteria. The user interface for the search form should be easy to use and should not require any knowledge of how to make a mysql query, so that users that do not have a computer science background can interact with the system. The people involved in STEM Academy do not have a computer science background for knowing how to make mysql queries which is why there is emphasis on making the product user freindly, so that it can be used by any person regardless of their background. 
+\section{Report Generation}
+In generating a report a user should be able to query information using a user freindly interface, the results of the report should be saveable in order to store the results into a database, and a user should be able to print a report that they generate. The following three sections dicuss three different technologies that can be used for accomplishing each one of these tasks for the report generation page.  
+\subsection{Search Form}
+The goal of the search form is to be able to make queries based on a camp, club, program, student, demographic information, and survey questions. The form should also allow users to make queries using a combination of the searh criteria. The user interface for the search form should be easy to use and should not require any knowledge of how to make a mysql query, so that any person regardless of their background can interact with it. 
 
-\subsection{Microsoft Access}
+%The people involved in STEM Academy do not have a computer science background for knowing how to make mysql queries which is why there is emphasis on making the product user freindly, so that it can be used by any person regardless of their background. 
+
+\subsubsection{Option 1: Microsoft Access}
 In Microsoft Access you can create a a search form by using a technique called query by form (QBF). First you make a form that contains empty text boxes for the search criteria and each text box represents a field in a table that is going to be queried \cite{Micro}. Empty text boxes will be ignored \cite{Micro}. To submit your search query you click on a command button on the form \cite{Micro}. When the command button is clicked it uses a macro that calls a query to produce the query results. 
-
-\subsection{FlySpeed SQL}
+ 
+\subsubsection{Option 2: FlySpeed SQL}
 FlySpeed SQL is a query tool whose objective is to make the management of data a simple process and it supports data servers that include MySQL, SQL, and PostgreSQL \cite{Andrew}. It allows users to search and change their database by using two different views which include a grid format and a custom form view \cite{Andrew}.  The database connection and queries generated are saved, so that users can return and work on them at a later time \cite{Fly}. The queries that are executed are are stored automatically\cite{Fly}. FlySpeed SQL is a tool that can be downloaded for free. However, there is a paid desktop version that has some additional features that are not available in the free version and it costs \$39 for a 1 year subscription and \$99 for a lifetime subscription\cite{FlyCost}. The paid version features transferring office formats, printing data, and saving reports as a PDF \cite{Fly}. 
 
-\subsection{QueryTree}
+\subsubsection{Option 3: QueryTree}
 "QueryTree is a web based ad hoc reporting tool that works with any Microsoft SQL Server, MySQL or PostgreSQL database" \cite{QueryTree}. Reports are created using a report building widget that is easy to use and QueryTree can be used in various devices \cite{QueryTree}. A user first selects a table and then is able to produce queries using widgets, produce basic calculations, and create groupings \cite{QueryTree}. QueryTree is not a free tool. It costs \$29 per month and the tool can be used in two databses and allows up to ten users \cite{QueryTree}. 
 
-\subsection{Discussion}
-The query by form technique that uses Microsoft Access is an easy method to use. A user simply enters their search criteria into input boxes and submits their query by clicking a command button which returns the query results by checking the table fields in the database using the search criteria. To create our search form we need individual input boxes for camp, club, program, and multiple input boxes for the demographic information. Furthermore, we will need a predefined number of input boxes for searching questions, but this is a problem since we do not know the number of questions that a user will use in their query. For example, if there are only two input boxes and a user wants to search for all the students that chose the color red, attended North Salem High School, and have parent's with a college education they will not be able to do their query. The user would have to manually add more input boxes for the number of questions that they are going to query and this requires knowledge of how to use Microsoft Access which makes this method not user freindly and ineffective. Another issue with this method is that we will need to figure out how to make the Microsoft Access form into a webpage for the website user interface. 
+\subsubsection{Option 4: JavaScript, PHP, HTML, and Ajax}
+For creating the search form JavaScript, HTML, and PHP can be used to create it. HTML and JavaScript can be used for DOM manipulation for changing the contents and structure of the elements that are displayed in the webpage. For example HTML and JavaScript can be used for creating the templates for the different types of queries for the search form. This is accomplished by having a button that calls a JavaScript function that creates a template for the query type that was selected and appending the query template to a parent div tag that is already in the HTML page. For returning the result of a query PHP can be used to obtain the result using a SELECT statment. In addition, PHP can be used for getting the survey questions and responses from the database for displaying them in the drop down menus for the query templates. 
 
-Some issues with the QueryTree tool are that it has a monthly payment of \$29, only ten people are allowed to use the tool, and two databases can only be connected. The number of users that are allowed to use the tool can be an issue if STEM Academy plans on having more than ten users that will be generating reports. If more than ten users will be generating reports the subscription will have to be upgraded which will cost more money per month to use the tool. The constraint of only being able to connect two databases will not be an issue if we are planning to store all of STEM Academy's information into one database. The benefits of QueryTree are that it is simple and easy use for searching information in a database. The user simply uses widgets to create queries to search the database. 
+\subsubsection{Discussion and Recommendation}
+The query by form technique that uses Microsoft Access is an easy method to use. A user simply enters their search criteria into input boxes and submits their query by clicking a command button. This will return the query results by checking the table fields in the database using the search criteria. To create our search form we will need individual input boxes for camp, club, program, and multiple input boxes for the demographic information. Furthermore, we will need a predefined number of input boxes for searching questions, but this is a problem since we do not know the number of questions that a user will use in their query. To solve this issue the user will have to add additional input boxes, but this requires knowledge on how to use Microsoft Access which makes this method ineffective and not user freindly. In addition, if we were to use this tool we will not be able to incorporate it in our website since it will require access to the source code. 
 
-Based on the screenshots I did not like how users generate queries to search a database using the FlySpeed SQL tool. A user clicks on fields that are on the tables to generate a query and it also displays text showing the query. The tables and query text make the FlySpeed SQL tool look difficult and intimidating to use which makes the tool not user freindly. A good thing about the tool is that it can be downloaded for free which helps people to determine whether or not the tool will be useful to them. 
 
-\subsection{Recommendation} 
-The tool that I decided to choose for making the search form is QueryTree. The reason why I picked it is because it is user freindly unlike FlySpeed SQL. In addition, it will not have any issues generating multiple queries based on survey questions. I think that the usability of the tool outweights the costs instead of having to use two other free technologies that have issues. 
+Some issues with the QueryTree tool are that it has a monthly payment of \$29 and only ten people are allowed to use the tool. The monthly payment plan is a deal breaker because we are trying to minimize or eliminate investing money in creating our product for STEM Academy. The number of users that are allowed to use the tool will be an issue if STEM Academy grows to the point that it will require more than ten users for generating a report which will mean that they will have to upgrade their subscription. By upgrading their subscription this will increase the monthly payment for using the tool. A benefit of the QueryTree tool is that it is user freindly through the use of widgets for querying information from a database. 
+
+%Some issues with the QueryTree tool are that it has a monthly payment of \$29, only ten people are allowed to use the tool, and two databases can only be connected. The number of users that are allowed to use the tool can be an issue if STEM Academy plans on having more than ten users that will be generating reports. If more than ten users will be generating reports the subscription will have to be upgraded which will cost more money per month to use the tool. The constraint of only being able to connect two databases will not be an issue if we are planning to store all of STEM Academy's information into one database. The benefits of QueryTree are that it is simple and easy use for searching information in a database. The user simply uses widgets to create queries to search the database. 
+
+Based on the screenshots I did not like how a user generates a query to search a database using the FlySpeed SQL tool. A user clicks on the fields that are on the tables to generate a query and it also displays the text showing the query. The tables and query text make the FlySpeed SQL tool look difficult and intimidating to use which makes it not user freindly. A good thing about this tool is that it can be downloaded for free. However, since it is not user freindly this tool is not a good option for querying information from a database. 
+
+A benefit of creating our own search form using JavaScript, HTML, and PHP is that we will be able to make adjustments to the templates to meet the needs of the client. By creating our own search form we will be able to avoid paying a monthly fee and we will also be able to incorporate the source code that we make into our user interface. Some issues with creating our own search form is that it will require quite of bit of time to implement and debugging errors will be difficult to fix since we our dealing with web pages. 
+
+ %A good thing about the tool is that it can be downloaded for free which helps people to determine whether or not the tool will be useful to them. 
+
+%The tool that I decided to choose for making the search form is QueryTree. The reason why I picked it is because it is user freindly. In addition, it will not have any issues generating multiple queries based on survey questions. I think that the usability of the tool outweights the costs instead of having to use two other free technologies that have issues.
+
+The technology that is the best option and will be used for creating the search form for generating a report will be JavaScript, HTML, and PHP. The reason why this is the best option for creating the search form is because it will help STEM Academy save money by not having to pay a monthly fee. It will give us the leverage to make changes to our own source code to meet the client's needs. Futhermore, the search form will not have any unnecessary features since we will be the ones designing it which is an issue that is encountered when using a tool that you did not design and does not have an open source code to the public. 
+
+
+
+
 
 %Print Form
-\section{Printing a Report}
-Reports generated using queries based on camp, program, club, demographics, student, and survey questions should be printable at all times. This will allow STEM Academy to present these results to their sponsors and on their applications to help them obtain more funding for their organization. When a report is printed it should only print out the report results and it should exclude parts of the webpage that are not related to the report. For example if a user printed a report it should not display the title of the webpage and the navigation bar. A print icon should be visible near the report to make it easy to print. The print options displayed should allow a user to choose the orientation, number of copies, margins, printer, etc. 
+\subsection{Printing a Report}
+Reports generated using queries based on camp, program, club, demographics, student, and survey questions should be printable at all times. This will allow STEM Academy to present these results to their sponsors and on their applications to help them obtain more funding for their organization. When a report is printed it should only print out the report results and it should exclude parts of the webpage that are not related to the report. A print icon should be visible near the report to make it easy to print. The print options displayed should allow a user to choose the orientation, number of copies, margins, printer, etc. 
 
-\subsection{JavaScript with CSS}
+\subsubsection{Option 1: JavaScript with CSS}
 First I will discuss Javascript with a CSS style sheet. When a user clicks on on a print button or hyperlink using the window.print() method it prints out the entire webpage\cite{Javascript}. To resolve the issue a separate CSS style sheet is created to exclude unwanted parts of a webpage before printing a document \cite{Javascript}. 
 
-\subsection{JQuery Print Preview plugin}
+\subsubsection{Option 2: JQuery Print Preview plugin}
 "The jQuery Print Preview plugin is designed to provide visitors with a preview of the print version of a website" \cite{Sam}. "Unlike traditional print previews this plugin brings all content and print styles within a modal window" \cite{Sam}. The jQuery Print Preview plugin consists of a source code and a demo. In the demo when a user clicks on the print icon or print this page hyperlink it displays a modal window that covers the entire page with the print version of the webpage. At the top of the modal window there are two icons for exiting the modal window and for displaying the print dialogue box which allows the user to choose their print options. The modal window forces the user to interact with it before returning to the main webpage.
 
-\subsection{Smart widget}
+\subsubsection{Option 3: Smart widget}
 Smart widget makes printing more efficient by removing unnecessary things from a webpage which include headers, footers, and advertisements before showing the print dialogue box \cite{SmartW}.The smart widget tool has extra features that include a print preview, edit option for removing additional content, and saving a page as a PDF \cite{SmartW}. The website that provides the tool has the code available for incorporating the smart widget into a HTML webpage and it is only one line of code. 
 
-\subsection{Discussion}
+\subsubsection{Discussion and Recommendation}
 The Print Preview Plugin can be adapted to help print a user's reports. The modal window that appears when one of the print links is clicked seems redundant. The reason why it is redundant is becuase the print dialogue box displays the print version and it also shows what is going to be printed on each page. 
 
 The smart widget tool is easy to incorporate into an HTML webpage. It also saves time by not having to write the code that excludes certain parts of a webpage. If we incorporate this tool into an HTML webpage we must verify that it is not removing content from the report that is going to be printed. If no content is removed from the report then this tool will be considered the best option. 
 
-To create a print version of a webpage using JavaScript and a CSS style sheet is not hard to implement if you have experience in web development. By making our own CSS style sheet for the print version of the webpage it ensures that the report form will be printed to our liking. 
+To create a print version of a webpage using JavaScript and a CSS style sheet is not hard to implement if you have experience in web development. By making our own CSS style sheet for the print version of the webpage it ensures that the report form will be printed to our liking unlike using the smart widge tool. In addition, it will not have the redundancy that the jQuery Print Preview plugin has. For these reasons it is recommended that the JavaScript and a CSS style sheet should be used for printing a report. 
 
-\subsection{Recommendation} 
-The tool that will be selected for printing a report is JavaScript with a CSS style sheet. The reason why I chose this tool is because we will be creating the CSS style sheet which will guarantee that only the report form is going to be printed. This tool is not redundant like the jQuery Print Preview plugin since the print icon or link will only display the print dialogue box. 
+%The tool that will be selected for printing a report will be JavaScript along with a CSS style sheet. The reason why I chose this tool is because we will be creating the CSS style sheet which will guarantee that only the report form is going to be printed. This tool is not redundant like the jQuery Print Preview plugin since the print icon or link will only display the print dialogue box. 
+
+
+
 
 %Saving a Report
-\section{Saving Report Results}
-Saving reports into a database will allow administrators to edit the title and captions of the data. It will also allow them to print their reports whenever they need them instead of having to generate another report and trying to recall the queries they used to obtain the same results. Saving reports should be an easy process for an administrator since one of our objectives is to make the user interface user freindly. 
+\subsection{Saving Report Results}
+Reports generated by query results should be able to be stored into the database. This will allow administrative users to edit or add query results to the reports that they have saved in the database. In addition, this will allow them to print their reports and use them for obtaining more funding for the STEM Academy. 
 
-\subsection{Izenda}
+%Saving reports into a database will allow administrators to edit the title and captions of the data. It will also allow them to print their reports whenever they need them instead of having to generate another report and trying to recall the queries they used to obtain the same results. Saving reports should be an easy process for an administrator since one of our objectives is to make the user interface user freindly. 
+
+\subsubsection{Option 1: Izenda}
 There are two ways that Izenda stores reports which include a file system mode and a database mode \cite{Adams}. In the file system mode reports are stored in a default folder that is named Reports \cite{Adams}. In database mode reports are stored in a default database table called IzendaAdHocReports \cite{Adams}. Some benefits of using the filesystem mode over the database mode include quicker access to stored reports, customization of security setup, and customization of how reports are distributed and stored \cite{Adams}. 
 
-\subsection{Access}
+\subsubsection{Option 2: Access}
 To save a report in Access you just click the Microsoft Office Button and then click save \cite{SimpleReport}. If the report does not have a name it will require a name in the Report Name box field \cite{SimpleReport}
 
-\subsection{QueryTree}
+\subsubsection{Option 3: QueryTree}
 "QueryTree is a web based ad hoc reporting tool that works with any Microsoft SQL Server, MySQL or PostgreSQL database" \cite{QueryTree}. Reports are created using a report building widget that is easy to use and QueryTree can be used in various devices \cite{QueryTree}. The QueryTree user interface is simple and easy to use. A user first selects a table and then is able to produce queries using widgets, produce basic calculations, and create groupings \cite{QueryTree}. QueryTree is not a free tool. It costs \$29 per month and the tool can be used in two databses and allows up to ten users \cite{QueryTree}. 
 
-\subsection{Discussion}
-Saving reports in Access is easy, but we will have to generate reports using Access. This will be a problem because we need to generate reports in a webpage for our user interface and it must also be easy to use. By choosing to use Access to save reports we will not be able to satisfy our requirements because the user will require knowledge on how to use Access and we will fail on having a webpage form for generating reports. 
+\subsubsection{Option 4: PHP and JavaScript}
+For saving a generated report we can use a combination of PHP and Javascript. JavaScript can be use to create a JSON object for the generated report for storing it into the database. This will make it easier to store reports into the database by reducing the number of tables for storing the report's query information and it will make it easier to query the information. PHP will then be used to insert the JSON object of the report into the database by using an INSERT statement.  
 
-The two different options for storing a report using Izenda is a nice feature. The only problem is that it requires you to install the Izenda tool in order to able to use the two methods. I searched for a price in the Izenda website, but was unable to find any prices. However, you can send your contact information which also includes your company name, number of employees, and estimated number of end users to get a price for using their tool \cite{CostIzenda}. The information that Izenda requires to obtain a price makes me assume that the tool is expensive and could potentially cost thousands of dollars to use. One of our goals is to use tools that will minimize the cost of creating our product for STEM Academy. For this reason Izenda is not a good option for storing reports into a database. 
+\subsubsection{Discussion and Recommendation}
+Saving reports in Access is easy, but we will have to generate reports using Access. This will be a problem because we need to generate reports in a webpage for our user interface and it must also be easy to use. By choosing to use Access to save reports we will not be able to satisfy our requirements because the user will require knowledge on how to use Access and we will fail on having a webpage for generating reports. 
 
-The QueryTree tool has the ability to save reports which helps satisfy the requirement of saving reports. In addition, it will help satisfy the report generation requirement due to its user freindly interface for generating reports. The only issue about the tool is the monthly fee that is required to use it. If we decide to use this tool we have to certain that it will be used, so that money is not wasted on purchasing a tool that will not end up being incorporated into our project. An issue that we will have to resolve is figuring out have to incorporate into our website for our user interface. 
+The two different options for storing a report using Izenda is a nice feature. The only problem with using this tool is that it requires a payment that is determined by your contact information that you send them which consists of a company name, number of employees, and an estimated number of end users\cite{CostIzenda}. Based on the information that you must send to get a quote to use the Izenda tool it seems like it is going to be an expensive tool to purchase which is not an option for our project because we want to minimize the cost for creating our product for STEM Academy. For this reason the Izenda tool is not an option for us to use for saving the results of a report. 
 
-\subsection{Recommendation} 
-The best option for saving reports is the QueryTree tool. It not only saves reports it also generates reports using a user freindly interface that uses widgets. By choosing this tool I will be able to satisfy two requirements that I am responsible for which includes printing reports and creating a search form. Eventhough the tool has a monthly fee it is far more usable in our project comapred to the other two technologies. 
+The QueryTree tool has the ability to save reports which helps satisfy the requirement of saving reports. In addition, it will help satisfy the report generation requirement due to its user freindly interface. The issues with using this tool include that it requires a monthly fee and if the software is not open source we will not be able to incorporate it in our website for the user interface. 
+
+An issue that we will be facing by implementing our own code for saving a report using JavaScript and PHP will be that it will be difficult to debug errors such as not being able to store the report JSON object into the database. The benefits of making our own implementation for saving a report will be that it will allow us to incorporate it in our user interface and we will be saving STEM Academy money by not having them pay a monthly fee for a tool that saves reports. Based on these two benefits we will be saving the reports that are generated using PHP and Javascript. 
 
 \begin{thebibliography}{2}
 \bibitem{surveyMonkey}
