Fixed more grammar errors in the search form section

--- a/final_tech_review.tex
+++ b/final_tech_review.tex
@@ -229,7 +229,7 @@ FlySpeed SQL is a query tool whose objective is to make the management of data a
 \subsubsection{Option 3: QueryTree}
 "QueryTree is a web based ad hoc reporting tool that works with any Microsoft SQL Server, MySQL or PostgreSQL database" \cite{QueryTree}. Reports are created using a report building widget that is easy to use and QueryTree can be used in various devices \cite{QueryTree}. A user first selects a table and then is able to produce queries using widgets, produce basic calculations, and create groupings \cite{QueryTree}. QueryTree is not a free tool. It costs \$29 per month and the tool can be used in two databses and allows up to ten users \cite{QueryTree}. 
 
-\subsubsection{Option 4: JavaScript, PHP, HTML, and Ajax}
+\subsubsection{Option 4: JavaScript, PHP, and HTML}
 For creating the search form JavaScript, HTML, and PHP can be used to create it. HTML and JavaScript can be used for DOM manipulation for changing the contents and structure of the elements that are displayed in the webpage. For example HTML and JavaScript can be used for creating the templates for the different types of queries for the search form. This is accomplished by having a button that calls a JavaScript function that creates a template for the query type that was selected and appending the query template to a parent div tag that is already in the HTML page. For returning the result of a query PHP can be used to obtain the result using a SELECT statment. In addition, PHP can be used for getting the survey questions and responses from the database for displaying them in the drop down menus for the query templates. 
 
 \subsubsection{Discussion and Recommendation}
